[package]
name = "sequencial_scripts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple command line tool to run multiple scripts in a succint and organised way. It will run all the scripts, capture the output and only print when an error has occured design to run something like tests and linting where you only care when it fails"
homepage = "https://" # TODO
docs = ""
readme = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossterm = "*"
